  RemoteEntityConnectionProvider and LocalEntityConnectionProvider refactored due to the above
  EntityConnectionProvider.getHostName() renamed to getServerHostName()
  RemoteServer.ServerInfo added
  RemoteServer.getServerInfo() added, getServerName(), getServerPort(), getServerVersion() and getServerPort() removed
  AbstractRemoteServer implements the above
  ServerMonitor modified according to the above changes
  AbstractEntityConnectionProvider.disconnect() now synchronized
  RemoteServer.connect(clientInfo) removed
  Sonar run, some minor refactoring
  Refactoring to reduce cyclomatic complexity
  EntityEditModel.isLookupAllowed(property) added
  DefaultEntityEditModel, property debug output refactored
  ColumnSearchPanel and PropertySearchPanel refactored to reduce cyclomatic complexity
  ValueLinks, removed superfluous generics
  EntityLookupField.initializeUI(), bug fixed, now handles the case when no search properties are defined for the underlying entity
  ClientUserMonitor, ClientMonitor, user and client type lists sorted
  ConnectionInfo and ClientUtil added
  ClientInfo is now an interface, implemented in ServerUtil.DefaultClientInfo
  RemoteServer.connect() now takes a ConnectionInfo as parameter
  Some refactoring due to the above
  Util.getVersionString() bug fixed, cut patch number from version
  EntityConnectionServer constructor error handling improved
  RemoteServer renamed to Server
  EntityTablePanel.initializeUI() bug fixed, NullPointerException when summary panel was not available
  EntityLookupField.SettingsPanel.initializeUI() bug fixed, CardLayout used
  EntityDataUtil moved to from tools to db
  EntityDataUtil renamed to EntityConnectionUtil
  EntityApplicationPanel.startApplications() bug fixed, did not handle exceptions originating from initializeConnectionProvider()
  FilteredTablePanel.selectTableColumns(), added select all/none buttons